# zippy-openctp

./: .gitignore  Cargo.toml  README.md  pyproject.toml
crates/zippy-openctp-core/: Cargo.toml
crates/zippy-openctp-core/src/: driver_ctp.rs  generator.rs  lib.rs  metrics.rs  normalize.rs  schema.rs  segment_ingress.rs  source.rs
crates/zippy-openctp-core/tests/: driver_ctp_config.rs  generator_source.rs  normalize_tick.rs  schema_contract.rs  segment_ingress.rs  segment_runtime_e2e.rs  source_batching.rs  source_config.rs  source_lifecycle.rs  source_reconnect.rs  source_state.rs  source_subscription.rs
crates/zippy-openctp-python/: Cargo.toml
crates/zippy-openctp-python/src/: lib.rs  native_sink.rs
docs/superpowers/plans/: 2026-04-08-openctp-live-source.md  2026-04-08-zippy-openctp-implementation.md
docs/superpowers/specs/: 2026-04-08-openctp-live-source-design.md  2026-04-26-openctp-market-generator-source-design.md
examples/: _runtime_lease.py  md_to_parquet.py  md_to_remote_pipeline.py  remote_mid_price_diff_200_std_200.py  segment_reader_probe.py  subscribe_mid_price_factors.py
python/zippy_openctp/: __init__.py  _internal.pyi  schemas.py  utils.py
tests/: test_example_runtime_loop.py  test_python_api.py  test_utils.py
