[package]
name = "zippy-openctp-python"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "zippy_openctp_internal"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
zippy-openctp-core = { path = "../zippy-openctp-core" }
