[package]
name = "zippy-openctp-python"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "zippy_openctp_internal"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
arrow = { version = "53.3.0", features = ["pyarrow"] }
pyo3 = { version = "0.22", features = ["extension-module"] }
serde_json = "1.0"
zippy-core = { path = "../../../zippy/crates/zippy-core" }
zippy-openctp-core = { path = "../zippy-openctp-core" }
zippy-segment-store = { path = "../../../zippy/crates/zippy-segment-store" }
